fixed footer gap

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -455,5 +455,5 @@ body {
     align-items: center;
     justify-content: space-between;
     padding-right: 180px;
-
+    gap: 36px;
 }
